--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@myorg/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "nx serve site"
+  },
   "private": true,
   "dependencies": {
     "next": "13.4.1",
