--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "@nx/linter": "16.2.1",
     "@nx/next": "^16.2.1",
     "@nx/react": "16.2.1",
+    "@nx/storybook": "16.2.1",
+    "@nx/web": "16.2.1",
     "@nx/workspace": "16.2.1",
+    "@storybook/addon-essentials": "7.0.17",
+    "@storybook/core-common": "^7.0.9",
+    "@storybook/core-server": "7.0.17",
+    "@storybook/react-vite": "7.0.17",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@swc/jest": "0.2.20",
